# vs-cmake-test

./: CMakeLists.txt  cpp.hint  helper.c  helper.h  test.c
